--- a/App.config
+++ b/App.config
@@ -1,10 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="Navegadores" type="MismaSesion.NavegadoresConfigurationSection, MismaSesion"/>
+  </configSections>
   <appSettings>
-    <add key="Perfiles" value="Default;Profile 1;Profile 2"/>
-    <add key="RutaLocal" value="C:\Users\<usuario>\AppData\Local\BraveSoftware\Brave-Browser\User Data"/>
-    <add key="RutaServidor" value="<Ruta navegador servidor>"/>
-    <add key="Archivos" value="History;Current Session;Current Tabs;Last Session;Last Tabs;Bookmarks"/>
-    <add key="RutaServidorAux" value="<Servidor auxiliar en caso de no poder escribir sobre el definitivo>"/> 
+    <add key="Log" value="C:\Scheduler\MismaSesion.log"/>
   </appSettings>
+  <Navegadores>
+    <Navegador Nombre="Brave"
+      Perfiles="Default;Profile 1;Profile 2" 
+      RutaLocal="C:\Users\$usuario$\AppData\Local\BraveSoftware\Brave-Browser\User Data"
+      RutaServidor="$Ruta navegador servidor$"
+      Archivos="History;Current Session;Current Tabs;Last Session;Last Tabs;Bookmarks"
+      RutaServidorAux="$Servidor auxiliar en caso de no poder escribir sobre el definitivo$">
+    </Navegador>
+    <Navegador Nombre="Chrome"
+      Perfiles="Profile 3;Profile 4" 
+      RutaLocal="C:\Users\$usuario$\AppData\Local\BraveSoftware\Brave-Browser\User Data"
+      RutaServidor="$Ruta navegador servidor$"
+      Archivos="History;Current Session;Current Tabs;Last Session;Last Tabs;Bookmarks"
+      RutaServidorAux="$Servidor auxiliar en caso de no poder escribir sobre el definitivo$">
+    </Navegador>
+  </Navegadores>
 </configuration>
